# swift-im

./: AUTHORS  CMakeLists.txt  INSTALL  ProjectHome.md  README  THANKS
po/: CMakeLists.txt  POTFILES.in  ru.po  swift-im.pot
src/: AboutDialog.cpp  AboutDialog.h  Application.cpp  Application.h  CMakeLists.txt  ChatTabs.cpp  ChatTabs.h  ChatWindow.cpp  ChatWindow.h  Configure.h  Configure.h.cmake  ContactsTreeColumns.cpp  ContactsTreeColumns.h  ContactsTreeWidget.cpp  ContactsTreeWidget.h  HistoryTextView.cpp  HistoryTextView.h  HttpClient.cpp  HttpClient.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MessageTextView.cpp  MessageTextView.h  MrimClient.cpp  MrimClient.h  MrimConnection.cpp  MrimConnection.h  MrimContact.cpp  MrimContact.h  MrimGroup.cpp  MrimGroup.h  MrimLoggedUser.cpp  MrimLoggedUser.h  MrimPacket.cpp  MrimPacket.h  MrimSignalServer.cpp  MrimSignalServer.h  MrimUtils.cpp  (+10 more)
swift-im/: ui.glade
trunk/: AUTHORS  CMakeLists.txt  README
trunk/po/: CMakeLists.txt  ru.po  swift-im.pot
trunk/src/: AboutDialog.cpp  Application.cpp  Application.h  CMakeLists.txt  ChatTabs.cpp  ChatTabs.h  ChatWindow.cpp  Configure.h.cmake  ContactsTreeColumns.cpp  ContactsTreeColumns.h  ContactsTreeWidget.cpp  ContactsTreeWidget.h  HistoryTextView.cpp  HistoryTextView.h  HttpClient.cpp  HttpClient.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MessageTextView.cpp  MessageTextView.h  MrimClient.cpp  MrimClient.h  MrimConnection.cpp  MrimConnection.h  MrimContact.cpp  MrimContact.h  MrimGroup.cpp  MrimGroup.h  MrimLoggedUser.cpp  MrimLoggedUser.h  MrimPacket.cpp  MrimPacket.h  MrimSignalClient.cpp  MrimSignalClient.h  MrimSignalServer.cpp  MrimSignalServer.h  MrimUtils.cpp  MrimUtils.h  (+9 more)
trunk/swift-im/: ui.glade
trunk/swift-im/img/smiles/: theme
